@@ -3,6 +3,14 @@ Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2008-11-04
+	Re. 24: unversioned and latest-version requests
+		- Accept dash ('-') as a valid version in an ontology URI request.
+		- The dash requst is handled with a "redirect" to the actual latest version
+		- the "unversioned" request is still handled as usual: it simple returns the
+		  contents of the latest version without any modification.
+	
+	
 2008-11-03
 	- _getFullPath: try with or without ".owl" extension
 	
